k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-dev-asst-client
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: ai-dev-asst-client
spec:
  type: LoadBalancer
  selector:
    app: ai-dev-asst-client
  ports:
    - name: http
      port: 80
      targetPort: http
